--- a/public/css/cart_summary.css
+++ b/public/css/cart_summary.css
@@ -45,9 +45,7 @@ body{
     font-size: 15px;
     box-shadow: 5px 10px;
 }
-#column1 form input{
-    left: 50%;
-}
+
 
 #column2{
     float:left; width:40%;
@@ -68,7 +66,7 @@ h3{
 }
 
 #item{
-    width: 320px;
+    width: 100%;
     height: 17px;
     margin-left: 10px;
     background-color: #f2edbe;
@@ -79,13 +77,26 @@ h3{
     box-shadow: 5px 5px;
     font-family: BalsamiqSansBold;
 }
+.row{
+    width: 100%;
+    height: 10%;
+    margin-top: 5px;
+    display: flex;
+}
+
+.edit{
+    float: right;
+}
 
 #second{
     float:left; width: 10%;
 }
 
 #third{
-    float:left; width: 10%;
+    float: right;; width: 10%;
+}
+.del{
+    margin-left: 15px;
 }
 
 #customer_id{
@@ -135,6 +146,7 @@ select{
 #pre_total_bs{
     width: 160px;
     height: 22px;    
+    text-align: right;
     background-color: white;
     color: black;
     border-style: solid;
@@ -163,6 +175,7 @@ select{
 #discount_p{
     width: 71px;
     height: 22px;    
+    text-align: right;
     background-color: white;
     color: black;
     border-style: solid;
@@ -176,7 +189,8 @@ select{
 
 #discount_bs{
     width: 71px;
-    height: 22px;    
+    height: 22px;   
+    text-align: right; 
     background-color: white;
     color: black;
     border-style: solid;
@@ -205,6 +219,7 @@ select{
 #total_bs{
     width: 115px;
     height: 22px;    
+    text-align: right;
     background-color: #30323d;
     color: white;
     border-style: solid;
