--- a/views/edit_movie.ejs
+++ b/views/edit_movie.ejs
@@ -9,7 +9,8 @@
         background-color: #3d9796;
         color: white;
         font-family: BalsamiqSansBold;
-
+        text-align: left;
+        font-size: 10px;
     }
 
     .closebtn {
