--- a/views/search_loans.ejs
+++ b/views/search_loans.ejs
@@ -8,7 +8,9 @@
         padding: 20px;
         background-color: #3d9796;
         color: white;
-        font-family: BalsamiqSansBold;        
+        font-family: BalsamiqSansBold;   
+        text-align: left;
+        font-size: 10px;     
     }
 
     .closebtn {
