--- a/views/search_movie.ejs
+++ b/views/search_movie.ejs
@@ -9,6 +9,8 @@
             padding: 20px;
             background-color: #3d9796;
             color: white;
+            text-align: left;
+            font-size: 10px;
             font-family: BalsamiqSansBold;
         }
 
