--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -6,8 +6,10 @@
     <style>
     .alert {
         padding: 20px;
-        background-color: #f2edbe;
+        background-color: red;
         color: black;
+        text-align: left;
+        font-size: 10px;
     }
 
     .closebtn {
