--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -12,7 +12,7 @@
             <input type="image" src="/images/icons/shopping_cart.png" width="30" height="30" />
         </form>    
 
-        <form id="header2" name="header2" action="/movies/search" method="get">
+        <form id="header2" name="header2" action="/admin/movies/search" method="get">
             <input type="image" src="/images/icons/movie.png" width="30" height="30" />
         </form>
 
